--- a/app/src/main/res/layout/fragment_amigos.xml
+++ b/app/src/main/res/layout/fragment_amigos.xml
@@ -72,9 +72,28 @@
                 android:src="@drawable/agregar_comentario02" />
         </RelativeLayout>
     </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="56dp">
 
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <LinearLayout
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_contactoComunidad"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical">
+
+            </android.support.v7.widget.RecyclerView>
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+    </RelativeLayout>
+
+    <!--<LinearLayout
         android:id="@+id/lnr_section_sol"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -119,6 +138,6 @@
             android:layout_height="fill_parent">
 
         </ListView>
-    </LinearLayout>
+    </LinearLayout>-->
 
 </LinearLayout>
