--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,8 @@
         <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/white</item>
 
     </style>
+
+
     <style name="AppTheme.Dark.Dialog" parent="Theme.AppCompat.Dialog">
         <item name="colorAccent">@color/white</item>
         <item name="android:textColor">@color/colorPrimary</item>
@@ -47,6 +49,12 @@
         <item name="android:textColorHint">@color/textColorhint</item>
     </style>
 
+
+    <style name="TextViewStyleSegmentButton">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/textColorPrimary</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 
     <style name="MyView">
         <item name="android:layout_width">wrap_content</item>
