--- a/app/src/main/res/layout/fragment_beber.xml
+++ b/app/src/main/res/layout/fragment_beber.xml
@@ -17,7 +17,7 @@
             style="@style/MyTextViewAvenir"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/cantidad_deseada"
+            android:text="@string/cantidad_limite"
             android:textColor="@color/textColorPrimary"
             android:textSize="16sp" />
 
@@ -51,21 +51,29 @@
 
         <ImageView
             android:id="@+id/imageView8"
-            android:layout_width="270dp"
-            android:layout_height="350dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/vasos_agua" />
-
-        <NumberPicker
-            android:id="@+id/np_agua"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/copas"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="90dp">
+            android:layout_centerHorizontal="true" />
 
-        </NumberPicker>
+        <com.bitrubio.prototipoebitrubio.ClasesExtendidas.HorizontalPicker
+            android:id="@+id/np"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/imageView8"
+            android:layout_alignEnd="@+id/imageView8"
+            android:layout_marginBottom="85dp"
+            android:layout_marginEnd="47dp"
+            android:ellipsize="marquee"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:marqueeRepeatLimit="2"
+            android:textColor="@color/textColorhint"
+            android:textSize="35sp"
+            app:dividerSize="10dp"
+            app:sideItems="1"
+            android:layout_alignStart="@+id/imageView8" />
     </RelativeLayout>
 
 
