--- a/app/src/main/res/layout/fragment_pastel_meta.xml
+++ b/app/src/main/res/layout/fragment_pastel_meta.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center">
+    >
 
     <LinearLayout
         android:layout_marginTop="12dp"
@@ -16,7 +16,7 @@
         <com.bitrubio.prototipoebitrubio.ClasesExtendidas.TexviewAvenir
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tiempo_meta"
+            android:text="@string/cantidad_limite"
             style="@style/MyTextViewAvenir"
             android:textSize="16sp"
             android:textColor="@color/textColorPrimary"
@@ -44,33 +44,36 @@
     <RelativeLayout
         android:id="@+id/img_fondo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="350dp"
         android:gravity="center"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true">
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/tiempo_fisica"
-        android:id="@+id/imageView8" />
-    <com.bitrubio.prototipoebitrubio.ClasesExtendidas.HorizontalPicker
-        android:id="@+id/np"
-        android:layout_width="155dp"
-        android:layout_height="wrap_content"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:textColor="@color/textColorhint"
-        android:textSize="35sp"
-        android:ellipsize="marquee"
-        android:marqueeRepeatLimit="2"
-        app:dividerSize="10dp"
-        app:sideItems="1"
-        android:layout_alignBottom="@+id/imageView8"
-        android:layout_alignEnd="@+id/imageView8"
-        android:layout_marginEnd="47dp"
-        android:layout_marginBottom="85dp" />
-    </RelativeLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/alimentos"
+            android:id="@+id/imageView8"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
+        <com.bitrubio.prototipoebitrubio.ClasesExtendidas.HorizontalPicker
+            android:id="@+id/np"
+            android:layout_width="155dp"
+            android:layout_height="wrap_content"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:textColor="@color/textColorhint"
+            android:textSize="35sp"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="2"
+            app:dividerSize="10dp"
+            app:sideItems="1"
+            android:layout_alignBottom="@+id/imageView8"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="56dp" />
+
+
+    </RelativeLayout>
 
     <ImageButton
         android:id="@+id/btn_aceptar"
