--- a/app/src/main/res/drawable/btn_transparente_borde_blanco.xml
+++ b/app/src/main/res/drawable/btn_transparente_borde_blanco.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:state_pressed="true">
     <shape>
-        <solid android:color="@color/transparenteBlanco" />
+        <solid android:color="@color/tranparenteWhite" />
         <corners android:radius="200dp" />
         <stroke android:width="2px"
             android:color="@color/white"/>
@@ -10,7 +10,7 @@
 </item>
 <item android:state_focused="true">
     <shape android:shape="rectangle">
-        <solid android:color="@color/transparenteBlanco" />
+        <solid android:color="@color/tranparenteWhite" />
         <corners android:radius="200dp" />
         <stroke android:width="2dp"
             android:color="@color/white" />
@@ -18,7 +18,7 @@
 </item>
 <item >
     <shape>
-        <solid android:color="@color/transparenteBlanco" />
+        <solid android:color="@color/tranparenteWhite" />
         <corners android:radius="200dp" />
         <stroke android:width="2px"
             android:color="@color/white"/>
