--- a/app/src/main/res/layout/activity_profile_expertos.xml
+++ b/app/src/main/res/layout/activity_profile_expertos.xml
@@ -51,7 +51,7 @@
                             android:gravity="center"
                             android:textColor="@color/white"
                             android:textSize="16sp"
-                            app:font="avenir-light.ttf"/>
+                            app:font="avenir-light.ttf" />
                     </LinearLayout>
 
                 </android.support.v7.widget.Toolbar>
@@ -143,10 +143,10 @@
                                     android:layout_marginTop="2dp"
                                     android:gravity="center"
                                     android:text="Dr.Fernando Rojas Tamayo"
-                                    android:textSize="16sp"
                                     android:textColor="@color/textColorPrimary"
+                                    android:textSize="16sp"
                                     android:textStyle="bold"
-                                    app:font="avenir-light.ttf"/>
+                                    app:font="avenir-light.ttf" />
 
                                 <com.bitrubio.prototipoebitrubio.ClasesExtendidas.TexviewAvenir
                                     android:id="@+id/txt_especialidad"
@@ -154,18 +154,18 @@
                                     android:layout_height="wrap_content"
                                     android:layout_margin="0dp"
                                     android:text="Medicina General"
-                                    app:font="avenir-light.ttf"
+                                    android:textColor="@color/textColorPrimary"
                                     android:textSize="16sp"
-                                    android:textColor="@color/textColorPrimary" />
+                                    app:font="avenir-light.ttf" />
 
                                 <com.bitrubio.prototipoebitrubio.ClasesExtendidas.TexviewAvenir
                                     android:id="@+id/txt_direccion"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="México D.F"
+                                    android:textColor="@color/textColorPrimary"
                                     android:textSize="16sp"
-                                    app:font="avenir-light.ttf"
-                                    android:textColor="@color/textColorPrimary" />
+                                    app:font="avenir-light.ttf" />
                             </LinearLayout>
                         </LinearLayout>
 
@@ -263,6 +263,7 @@
         </android.support.design.widget.CollapsingToolbarLayout>
 
         <include layout="@layout/container_expertos" />
+
     </android.support.design.widget.AppBarLayout>
 
 
