Fragmentos metas fisicas , transition and newinstance por fragmento declarado

--- a/app/src/main/res/layout/activity_metas_fisicas.xml
+++ b/app/src/main/res/layout/activity_metas_fisicas.xml
@@ -52,22 +52,15 @@
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
-        <RelativeLayout
-            android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:orientation="vertical">
-        </RelativeLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <RelativeLayout
+    <FrameLayout
         android:id="@+id/fragment_tipoMetas"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    </RelativeLayout>
+    </FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
 
