--- a/app/src/main/res/layout/fragment_meta_peso.xml
+++ b/app/src/main/res/layout/fragment_meta_peso.xml
@@ -37,10 +37,12 @@
             android:id="@+id/image_foto"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:layout_marginLeft="2dp"
             android:layout_centerVertical="true"
             android:src="@drawable/foto_alimentos"
             app:border_color="@color/white"
-            app:border_width="2dp" />
+            android:padding="0dp"
+            app:border_width="1dp" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/btn_foto"
