--- a/app/src/main/res/layout/content_recycler_home.xml
+++ b/app/src/main/res/layout/content_recycler_home.xml
@@ -28,6 +28,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="12dp"
+                android:background="@drawable/bg_circle_white"
                 android:src="@drawable/foto_test"
                 app:border_width="0dp" />
 
