--- a/app/src/main/res/layout/activity_profile_expertos.xml
+++ b/app/src/main/res/layout/activity_profile_expertos.xml
@@ -59,9 +59,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_collapseMode="parallax"
-
-                    >
+                    app:layout_collapseMode="parallax">
 
                     <RelativeLayout
                         android:id="@+id/fondo_bity"
@@ -260,10 +258,11 @@
 
             </LinearLayout>
 
+
         </android.support.design.widget.CollapsingToolbarLayout>
 
-        <include layout="@layout/container_expertos" />
 
+        <include layout="@layout/container_expertos" />
     </android.support.design.widget.AppBarLayout>
 
 
