--- a/app/src/main/res/layout/fragment_meta_fisica_uno.xml
+++ b/app/src/main/res/layout/fragment_meta_fisica_uno.xml
@@ -122,7 +122,7 @@
                             android:orientation="horizontal">
 
                             <com.bitrubio.prototipoebitrubio.ClasesExtendidas.TexviewAvenir
-                                android:id="@+id/edit_armarEquipo"
+                                android:id="@+id/txt_armarEquipo"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
