--- a/app/src/main/res/layout/fragment_meta_peso.xml
+++ b/app/src/main/res/layout/fragment_meta_peso.xml
@@ -31,7 +31,7 @@
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:layout_marginTop="50dp"
-        android:paddingLeft="15dp">
+        android:paddingLeft="10dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_foto"
@@ -51,19 +51,20 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:padding="0dp"
-            android:src="@drawable/ic_subir_foto" />
+            android:background="@drawable/ic_subir_foto" />
 
     </RelativeLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/fondo_bity"
         android:layout_centerHorizontal="true"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center">
 
