--- a/app/src/main/res/layout/content_solictudes_row.xml
+++ b/app/src/main/res/layout/content_solictudes_row.xml
@@ -7,40 +7,43 @@
     android:layout_height="wrap_content"
     swipe:leftEdgeSwipeOffset="0dp"
     swipe:rightEdgeSwipeOffset="0dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="@color/white"
         android:gravity="center"
-        android:weightSum="10"
-        android:tag="Bottom3">
+        android:tag="Bottom3"
+        android:weightSum="10">
+
         <com.bitrubio.prototipoebitrubio.ClasesExtendidas.TexviewAvenir
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="5"
             android:text="Borrar Solicitud?"
             android:textColor="@color/textColorPrimary"
+            android:textSize="16sp"
             android:textStyle="bold"
-            app:font="avenir-light.ttf"
-            android:textSize="16sp" />
+            app:font="avenir-light.ttf" />
+
         <Button
             android:id="@+id/delete"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginRight="4dp"
             android:layout_weight="4"
-            android:src="@drawable/btn_intro"
-            android:text="Si,Quitar"
+            android:background="@drawable/btn_close_session"
+            android:text="Si,quitar"
             android:textAllCaps="false"
             android:textColor="@color/white" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
         android:orientation="vertical"
         android:padding="4dp">
-
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -69,8 +72,8 @@
                 android:layout_toRightOf="@id/img_comunidad_amigo"
                 android:text="Alan Contreras "
                 android:textColor="@color/textColorPrimary"
-                app:font="avenir-light.ttf"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                app:font="avenir-light.ttf" />
 
             <CheckBox
                 android:id="@+id/txt_check_sol"
