cambio de texto Datos Personales MainActivity

--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -9,14 +9,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <VideoView
+        <com.bitrubio.prototipoebitrubio.ClasesExtendidas.MyVideoView
             android:id="@+id/video_in"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true" />
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center"/>
 
 
     </FrameLayout>
