--- a/app/src/main/res/layout/content_servicios.xml
+++ b/app/src/main/res/layout/content_servicios.xml
@@ -3,8 +3,7 @@
     xmlns:card_view="http://schemas.android.com/tools"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-
+    android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -14,15 +13,15 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="120dp"
+        android:layout_marginTop="90dp"
         >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:layout_gravity="center"
             android:orientation="vertical">
 
-            <android.support.v7.widget.CardView
+   <!--         <android.support.v7.widget.CardView
                 android:id="@+id/card_view_farmacia"
                 android:layout_width="match_parent"
                 android:layout_height="155dp"
@@ -72,7 +71,7 @@
                         android:src="@drawable/subastas_card" />
 
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </android.support.v7.widget.CardView>-->
 
             <android.support.v7.widget.CardView
                 android:id="@+id/card_view_donacion"
@@ -80,7 +79,6 @@
                 android:layout_height="155dp"
                 android:layout_marginLeft="12dp"
                 android:layout_marginRight="12dp"
-                android:layout_marginTop="6dp"
                 android:background="@drawable/donacion_card"
                 app:cardElevation="0dp"
                 card_view:cardElevation="1dp">
