--- a/app/src/main/res/layout/linear_background_main.xml
+++ b/app/src/main/res/layout/linear_background_main.xml
@@ -108,7 +108,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Mi Perfil "
+                android:text="Datos personales "
                 android:textColor="@color/textColorPrimary"
                 android:textSize="14sp"
                 app:font="avenir-light.ttf" />
