--- a/app/src/main/res/layout/linear_bity_contenido.xml
+++ b/app/src/main/res/layout/linear_bity_contenido.xml
@@ -118,7 +118,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Mi Perfil "
+                android:text="Datos personales "
                 android:textColor="@color/textColorPrimary"
                 android:textSize="16sp"
                 app:font="avenir-light.ttf" />
